# truffle-plays

./: .gitmodules  README.md  todo.md
dashboard/: package.json  pnpm-lock.yaml
dashboard/src/lib/components/: Header.svelte  Modal.svelte
dashboard/src/routes/: +page.svelte
dashboard/src/routes/login/: +page.server.ts  +page.svelte
dashboard/src/routes/signup/: +page.server.ts  +page.svelte
dashboard/src/routes/signup/[key]/: +page.server.ts  +page.svelte
dashboard/src/routes/toggle-stream/: +page.server.ts  +page.svelte
new-server/: Cargo.toml  fly.toml
new-server/migrations/: 20230325172819_init.sql
new-server/src/: main.rs  schema.sql
server/: .env  Dockerfile  fly.toml  package.json  pnpm-lock.yaml
server/migrations/: 20230402132215_register_links.sql  20230405195806_rename_username_orgId.sql  20230911160141_reworked_user_types.sql  20231109182740_track-links.sql
server/routes/: root.js
server/src/: auth.rs  db.rs  main.rs  streamer.rs  util.rs  viewer.rs
streamer-client/: Cargo.toml  settings.json
streamer-client/src/: init.rs  input.rs  main.rs
truffle-client/: index.html  package.json  pnpm-lock.yaml  tailwind.config.cjs
truffle-client/src/: App.svelte
