[package]
name = "new-server"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
argon2 = { version = "0.5.0", features = ["alloc"] }
axum = "0.6.9"
axum-macros = "0.3.5"
dotenv = "0.15.0"
dotenv_codegen = "0.15.0"
rustis = { version = "0.8.3", features = ["tokio-tls"] }
serde = { version = "1.0.152", features = ["derive"] }
sqlx = { version = "0.6.2", features = ["runtime-actix-rustls", "sqlite" ] }
tokio = { version = "1.25.0", features = ["full"] }
uuid = { version = "1.3.0", features = ["v5", "v4"] }
